Fix CORS preflight OPTIONS rejection for cross-origin browser requests